samples/_failures_safe/1761249791_8f25bb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_39ee78a0.c: In function ‘main’:
./samples/SAFE/__tmp_39ee78a0.c:144:9: error: expected declaration or statement at end of input
  144 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_39ee78a0.c:144:9: error: expected declaration or statement at end of input
